--- a/sinter_homogeneous.in
+++ b/sinter_homogeneous.in
@@ -4,21 +4,17 @@ units           metal
 dimension       3
 boundary        p p p
 atom_style      atomic
-read_data GaN-Base303025.lmp
+read_data GaN-Base303025.lmp # initial configuration
 region A block -50 150 -50 150  -20  130.0000000  
 region B sphere 29.6 40 31 30 side in
 region C sphere 29.6 40 94 30 side in
 region U union 2 B C
 region I intersect 2 A U side out
 delete_atoms region I 
-region d sphere 29.6 40 31 25 side in
-region e sphere 29.6 40 94 25 side in
-write_data particle-3030.data
-
-
+write_data particle-3030.data # initial sperical NPs
 
 pair_style	sw
-pair_coeff	* * AlInGaAs.SW Ga N In
+pair_coeff	* * InGaN.SW Ga N In  # potential information
  
 neighbor        2.0 bin
 neigh_modify	delay 0 every 1
@@ -29,26 +25,18 @@ group Ga type 1
 group N type 2
 group Gp_B region B
 group Gp_S region C
-group Gp_Bi region d
-group Gp_Sm region e
 
 compute 1 Gp_B msd
 compute  2 Gp_S msd
 compute 3 all msd
 compute 4 Gp_S com
 compute 5 Gp_B com
-compute 6 Gp_Sm com
-compute 7 Gp_Bi com
-#variable a equal sqrt(c_4[1]*c_4[1]+c_4[2]*c_4[2]+c_4[3]*c_4[3]) 
-#variable b equal sqrt(c_5[1]*c_5[1]+c_5[2]*c_5[2]+c_5[3]*c_5[3])
-#variable d equal (v_a-v_b)
-#variable s equal c_4[3]-c_5[3]
-variable cm equal sqrt((c_4[1]-c_5[1])^2+(c_4[2]-c_5[2])^2+(c_4[3]-c_5[3])^2)
-variable dm equal sqrt((c_6[1]-c_7[1])^2+(c_6[2]-c_7[2])^2+(c_6[3]-c_7[3])^2)
-log log.eq
+
+variable cm equal sqrt((c_4[1]-c_5[1])^2+(c_4[2]-c_5[2])^2+(c_4[3]-c_5[3])^2)  # calculation of distance between center of mass of NPs pair
+log log.eq 
 
 fix 1 all nvt temp 300 300 1 
-thermo_style custom step temp pe etotal c_1[4] c_2[4] c_3[4]  v_cm v_dm
+thermo_style custom step temp pe etotal c_1[4] c_2[4] c_3[4]  v_cm 
 dump 1 all atom 5000 sinterEq-2900(3030).atom
 
 thermo 1000
@@ -59,8 +47,8 @@ undump    1
 
 log log.heating
 
-fix 2 all nvt temp 300 2900 1 
-thermo_style custom step temp pe etotal c_1[4] c_2[4] c_3[4]  v_cm v_dm
+fix 2 all nvt temp 300 2900 1 # integration step
+thermo_style custom step temp pe etotal c_1[4] c_2[4] c_3[4]  v_cm 
 dump 2 all atom 5000 sinter-Heating-2900(3030).atom
 thermo 1000
 timestep 0.001
@@ -70,7 +58,7 @@ undump   2
 log log.sintering
 
 fix 3 all nvt temp 2900 2900 1 
-thermo_style custom step temp pe etotal c_1[4] c_2[4] c_3[4]  v_cm v_dm
+thermo_style custom step temp pe etotal c_1[4] c_2[4] c_3[4]  v_cm 
 
 dump 3 all atom 10000 sinter3030-2900.atom
 thermo 1000
